--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div>
                   <span class="projectsSubtitle">PHP/WordPress</span>
                   <h3 class="projectsTitle">Comtur Ubatuba</h3>
-                  <a href="https://comturubatuba.com.br/" class="projectsButton button buttonSmall">
+                  <a href="https://comturubatuba.com.br/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -130,7 +130,35 @@
                 <div>
                   <span class="projectsSubtitle">React JS</span>
                   <h3 class="projectsTitle">Organo</h3>
-                  <a href="https://organo-ramon.vercel.app/" class="projectsButton button buttonSmall">
+                  <a href="https://organo-ramon.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-link"></i>
+                  </a>
+                </div>
+              </div>
+            </article>
+
+            <article class="projectsCard">
+              <img src="./assets/img/alurabooks.png" alt="" class="projectsImg" />
+
+              <div class="projectsModal">
+                <div>
+                  <span class="projectsSubtitle">HTML/CSS/JS</span>
+                  <h3 class="projectsTitle">Alura Books</h3>
+                  <a href="https://vercel.com/ramonoliveira1/alura-books/DXKpiYYMv2HCjL5ziMe5TCQYSzMo" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-link"></i>
+                  </a>
+                </div>
+              </div>
+            </article>
+
+            <article class="projectsCard">
+              <img src="./assets/img/alura-midi.png" alt="" class="projectsImg" />
+
+              <div class="projectsModal">
+                <div>
+                  <span class="projectsSubtitle">Alura Midi</span>
+                  <h3 class="projectsTitle">JavaScript</h3>
+                  <a href="https://alura-midi-eta-nine.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
                 </div>
@@ -144,22 +172,7 @@
                 <div>
                   <span class="projectsSubtitle">HTML/CSS/JS</span>
                   <h3 class="projectsTitle">Pokedéx</h3>
-                  <a href="https://pokedex-ochre-eight.vercel.app/" class="projectsButton button buttonSmall">
-                    <i class="ri-link"></i>
-                  </a>
-                </div>
-              </div>
-            </article>
-
-
-            <article class="projectsCard">
-              <img src="./assets/img/alura-midi.png" alt="" class="projectsImg" />
-
-              <div class="projectsModal">
-                <div>
-                  <span class="projectsSubtitle">Alura Midi</span>
-                  <h3 class="projectsTitle">JavaScript</h3>
-                  <a href="https://alura-midi-eta-nine.vercel.app/" class="projectsButton button buttonSmall">
+                  <a href="https://pokedex-ochre-eight.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
                 </div>
