--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
               <div class="projectsModal">
                 <div>
-                  <span class="projectsSubtitle">Alura Midi</span>
-                  <h3 class="projectsTitle">JavaScript</h3>
+                  <span class="projectsSubtitle">JavaScript</span>
+                  <h3 class="projectsTitle">Alura Midi</h3>
                   <a href="https://alura-midi-eta-nine.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
