--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div>
                   <span class="projectsSubtitle">HTML/CSS/JS</span>
                   <h3 class="projectsTitle">Alura Books</h3>
-                  <a href="https://vercel.com/ramonoliveira1/alura-books/DXKpiYYMv2HCjL5ziMe5TCQYSzMo" target="_blank" class="projectsButton button buttonSmall">
+                  <a href="https://alura-books-nine-lime.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
                 </div>
