adicao de bota github

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                   <a href="https://organo-ramon.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
+                  <a href="https://github.com/ramonoliveira1/organo" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-github-line"></i>
+                  </a>
                 </div>
               </div>
             </article>
@@ -146,6 +149,9 @@
                   <h3 class="projectsTitle">Alura Books</h3>
                   <a href="https://alura-books-nine-lime.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
+                  </a>
+                  <a href="https://github.com/ramonoliveira1/AluraBooks" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-github-line"></i>
                   </a>
                 </div>
               </div>
@@ -161,6 +167,9 @@
                   <a href="https://alura-midi-eta-nine.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
                   </a>
+                  <a href="https://github.com/ramonoliveira1/alura-midi" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-github-line"></i>
+                  </a>
                 </div>
               </div>
             </article>
@@ -174,6 +183,9 @@
                   <h3 class="projectsTitle">Pokedéx</h3>
                   <a href="https://pokedex-ochre-eight.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
                     <i class="ri-link"></i>
+                  </a>
+                  <a href="https://github.com/ramonoliveira1/pokedex" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-github-line"></i>
                   </a>
                 </div>
               </div>
