adição de projeto meteora

--- a/index.html
+++ b/index.html
@@ -158,6 +158,23 @@
             </article>
 
             <article class="projectsCard">
+              <img src="./assets/img/meteora.png" alt="" class="projectsImg" />
+
+              <div class="projectsModal">
+                <div>
+                  <span class="projectsSubtitle">HTML, CSS e Bootstrap</span>
+                  <h3 class="projectsTitle">Meteora</h3>
+                  <a href="https://meteora-tan.vercel.app/" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-link"></i>
+                  </a>
+                  <a href="https://github.com/ramonoliveira1/Meteora" target="_blank" class="projectsButton button buttonSmall">
+                    <i class="ri-github-line"></i>
+                  </a>
+                </div>
+              </div>
+            </article>
+
+            <article class="projectsCard">
               <img src="./assets/img/alura-midi.png" alt="" class="projectsImg" />
 
               <div class="projectsModal">
